Fix: Last persons in the View1 were not visible

--- a/src/sass/screen1/_layout.sass
+++ b/src/sass/screen1/_layout.sass
@@ -72,7 +72,7 @@
       line-height: $header-height
       // Hack: For unknown reason h3 got top and bottom margins
       margin-top: 0
-      margin-botton: 0
+      margin-bottom: 0
     .filters
       @include span(6 at 2)
       & > span
